--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,30 +1,35 @@
 {
-	"name": "@mood-tracker/web",
-	"version": "1.0.0",
-	"private": true,
-	"type": "module",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"dependencies": {
-		"@mood-tracker/verdant": "workspace:*",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.8.2",
-		"workbox-core": "^6.5.4",
-		"workbox-expiration": "^6.5.4",
-		"workbox-precaching": "^6.5.4",
-		"workbox-routing": "^6.5.4",
-		"workbox-strategies": "^6.5.4",
-		"workbox-window": "^6.5.4"
-	},
-	"devDependencies": {
-		"@types/react": "^18.0.28",
-		"@types/react-dom": "^18.0.11",
-		"@vitejs/plugin-react": "^3.1.0",
-		"vite": "^3.1.0",
-		"vite-plugin-pwa": "^0.12.7"
-	}
+  "name": "@mood-tracker/web",
+  "version": "1.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
+  "dependencies": {
+    "@a-type/ui": "^0.1.15",
+    "@a-type/utils": "^1.0.5",
+    "@mood-tracker/verdant": "workspace:*",
+    "classnames": "^2.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.2",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-window": "^6.5.4"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@unocss/transformer-variant-group": "^0.57.7",
+    "@vitejs/plugin-react": "^3.1.0",
+    "unocss": "^0.57.7",
+    "vite": "^3.1.0",
+    "vite-plugin-pwa": "^0.12.7"
+  }
 }
